Fin logica actualizacion usuario, imagen de usuario, y modificacion password

--- a/gestor_veterinaria/src/app/pages/control-panel/change-pass.component.html
+++ b/gestor_veterinaria/src/app/pages/control-panel/change-pass.component.html
@@ -9,21 +9,21 @@
            <br>
            <br>
            <br>
-            <form action="" class="form-floating align-items-center p-2">
+            <form action="" class="form-floating align-items-center p-2" [formGroup]="miForm">
                 <div class="form-floating m-2">
-                    <input type="password" class="form-control" id="password" placeholder="password">
+                    <input type="password" class="form-control" id="password" placeholder="password" formControlName="password">
                     <label for="password">Contraseña actual</label>
                 </div>
                 <div class="form-floating m-2">
-                    <input type="password" class="form-control" id="passwordN" placeholder="nuevo password">
+                    <input type="password" class="form-control" id="passwordN" placeholder="nuevo password" formControlName="nPassword">
                     <label for="passwordN">Nueva contraseña</label>
                 </div>
                 <div class="form-floating m-2">
-                    <input type="password" class="form-control" id="passwordC" placeholder="confirmación nuevo password">
+                    <input type="password" class="form-control" id="passwordC" placeholder="confirmación nuevo password" formControlName="cPassword">
                     <label for="passwordC">confirma tu nueva contraseña</label>
                 </div>
                 <div class="form-floating m-2">
-                  <button class="btn btn-success">Guardar</button>
+                  <button class="btn btn-success" (click)="updatePassword()">Guardar</button>
                 </div>
             </form>
         </div>
