--- a/gestor_veterinaria/src/app/pages/data-master-manager/panel-data-master/panel-data-master.component.html
+++ b/gestor_veterinaria/src/app/pages/data-master-manager/panel-data-master/panel-data-master.component.html
@@ -6,7 +6,7 @@
     <div class="col-2">
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-              <button class="nav-link active" id="nav-ciudad-tab" data-bs-toggle="tab" data-bs-target="#nav-ciudad" type="button" role="tab" aria-controls="nav-ciudad" aria-selected="true"> <span class="material-icons bi md-48">location_on</span></button>
+              <button class="nav-link active" id="nav-cuidad-tab" data-bs-toggle="tab" data-bs-target="#nav-cuidad" type="button" role="tab" aria-controls="nav-cuidad" aria-selected="true"> <span class="material-icons bi md-48">location_on</span></button>
               <button class="nav-link" id="nav-tipoDoc-tab" data-bs-toggle="tab" data-bs-target="#nav-tipoDoc" type="button" role="tab" aria-controls="nav-tipoDoc" aria-selected="false"> <span class="material-icons bi md-48">format_list_bulleted</span></button>
             </div>
           </nav>
