Manejo de productos finalizado

--- a/gestor_veterinaria/src/app/pages/client-manager/pages/pets/del-pet.component.html
+++ b/gestor_veterinaria/src/app/pages/client-manager/pages/pets/del-pet.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Actualización de mascotas</h1>
+    <h1>Eliminación de mascotas</h1>
     <hr>
     <form class="example-form form-floating p-2 m-2">
         <mat-form-field class="m-3">
